--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ research/
 tests/test_results
 tests/experiments
 experiments/
+benchmarks/conv_nn/cifar10_train_data
+benchmarks/conv_nn/cifar10_test_data
+benchmarks/conv_nn/init.pkl
